ips/firewall/iptables.rules
# Generated by iptables-save v1.8.10 (nf_tables) on Wed Apr  8 20:13:07 2026
*mangle
:PREROUTING ACCEPT [121318:19452772]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [94531:8370792]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -m conntrack --ctstate RELATED,ESTABLISHED -j CONNMARK --restore-mark --nfmask 0xff0000 --ctmask 0xff0000
-A OUTPUT -m conntrack --ctstate NEW -m mark ! --mark 0x0/0xff0000 -j CONNMARK --save-mark --nfmask 0xff0000 --ctmask 0xff0000
COMMIT
# Completed on Wed Apr  8 20:13:07 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Wed Apr  8 20:13:07 2026
*filter
:INPUT ACCEPT [95445:8365479]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:ts-forward - [0:0]
:ts-input - [0:0]
-A INPUT -j ts-input
-A FORWARD -j ts-forward
-A FORWARD -i ens19 -o ens18 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens18 -o ens19 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens18 -o ens19 -j ACCEPT
-A FORWARD -i ens19 -o ens18 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens18 -o ens19 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i ens18 -o ens19 -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A ts-forward -i tailscale0 -j MARK --set-xmark 0x40000/0xff0000
-A ts-forward -m mark --mark 0x40000/0xff0000 -j ACCEPT
-A ts-forward -s 100.64.0.0/10 -o tailscale0 -j DROP
-A ts-forward -o tailscale0 -j ACCEPT
-A ts-input -s 100.104.43.19/32 -i lo -j ACCEPT
-A ts-input -s 100.115.92.0/23 ! -i tailscale0 -j RETURN
-A ts-input -s 100.64.0.0/10 ! -i tailscale0 -j DROP
-A ts-input -i tailscale0 -j ACCEPT
-A ts-input -p udp -m udp --dport 41641 -j ACCEPT
COMMIT
# Completed on Wed Apr  8 20:13:07 2026
# Generated by iptables-save v1.8.10 (nf_tables) on Wed Apr  8 20:13:07 2026
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [1560:98703]
:ts-postrouting - [0:0]
-A POSTROUTING -j ts-postrouting
-A POSTROUTING -o ens18 -j MASQUERADE
-A POSTROUTING -o ens18 -j MASQUERADE
-A ts-postrouting -m mark --mark 0x40000/0xff0000 -j MASQUERADE
COMMIT
# Completed on Wed Apr  8 20:13:07 2026
